frontend-listado-juegos+estilos

--- a/app/app/src/main/res/values/strings.xml
+++ b/app/app/src/main/res/values/strings.xml
@@ -4,8 +4,10 @@
     <string name="title_buscar">Buscar</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_juegos">Juegos</string>
+    <string name="title_vacio"> </string>
     <string name="title_notifications">Notifications</string>
     <string name="title_perfil">Perfil</string>
+    <string name="title_salir">Salir</string>
     <string name="title_activity_login">LoginActivity</string>
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password</string>
