ahora se puede crear un ordenador sin problemas, añadi en el menu el boton de ordenadores para poder ver el listado de ordenadores creados y agregue la funcion de eliminar un ordenador

--- a/app/app/src/main/res/values/strings.xml
+++ b/app/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="title_vacio"> </string>
     <string name="title_notifications">Notifications</string>
     <string name="title_perfil">Perfil</string>
+    <string name="title_ordenadores">Ordenadores</string>
     <string name="title_salir">Salir</string>
     <string name="title_activity_login">LoginActivity</string>
     <string name="prompt_email">Email</string>
